tests/ui/errors/snapshots/lex_hex_escape_non_hex_digits_in_string.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid hex escape
   ╭─[test.lis:1:10]
 1 │ let x = "\xZZ"
   ·          ─┬
   ·           ╰── expected 2 hex digits
   ╰────
  help: Hex escapes are `\xHH` with 2 digits and `\UHHHHHHHH` with 8 digits · code: [lex.invalid_hex_escape]
