tests/ui/errors/snapshots/lex_invalid_escape_in_format_string.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid escape sequence
   ╭─[test.lis:1:12]
 1 │ let x = f"a\qb"
   ·            ─┬
   ·             ╰── `\q` is not a valid escape
   ╰────
  help: Valid escapes are `\a`, `\b`, `\f`, `\n`, `\r`, `\t`, `\v`, `\\`, `\"`, `\xHH` (hex), `\ooo` (octal), and `\u{HEX}` or `\UHHHHHHHH` (unicode) · code: [lex.invalid_escape_sequence]
