tests/ui/errors/snapshots/lex_invalid_escape_sequence_in_string.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid escape sequence
   ╭─[test.lis:3:17]
 2 │ fn main() {
 3 │   let s = "hello\!world"
   ·                 ─┬
   ·                  ╰── `\!` is not a valid escape
 4 │ }
   ╰────
  help: Valid escapes are `\a`, `\b`, `\f`, `\n`, `\r`, `\t`, `\v`, `\\`, `\"`, `\xHH` (hex), `\ooo` (octal), and `\u{HEX}` or `\UHHHHHHHH` (unicode) · code: [lex.invalid_escape_sequence]
