tests/ui/errors/snapshots/lex_invalid_escape_sequence_question_mark.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid escape sequence
   ╭─[test.lis:3:16]
 2 │ fn main() {
 3 │   let s = "test\?string"
   ·                ─┬
   ·                 ╰── `\?` is not a valid escape
 4 │ }
   ╰────
  help: Valid escapes are `\a`, `\b`, `\f`, `\n`, `\r`, `\t`, `\v`, `\\`, `\'`, `\xHH` (hex), `\ooo` (octal), and `\u{HEX}` (unicode) · code: [lex.invalid_escape_sequence]
