tests/ui/errors/snapshots/lex_octal_escape_out_of_range.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Octal escape out of range
   ╭─[test.lis:1:10]
 1 │ let x = "\400"
   ·          ──┬─
   ·            ╰── octal escape value exceeds maximum (0o377 / 0xFF)
   ╰────
  help: Octal escapes must be in the range `\0` to `\377` (0x00 to 0xFF) · code: [lex.octal_escape_out_of_range]
